--- a/zh/index.html
+++ b/zh/index.html
@@ -1,10 +1,2 @@
-<!DOCTYPE html>
-<html lang="zh">
-  <head>
-    <title>//localhost:1313/</title>
-    <link rel="canonical" href="//localhost:1313/">
-    <meta name="robots" content="noindex">
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=//localhost:1313/">
-  </head>
-</html>
+<!doctype html><html lang=zh><head><title>https://www.lumos.xin/</title>
+<link rel=canonical href=https://www.lumos.xin/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://www.lumos.xin/"></head></html>
